--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,19 @@ a{
 a:hover{
   color: unset;
 }
+
+section,footer{
+  padding: 60px 0%;
+}
+
+
+/* ============= custom scroll-bar =============== */
+::-webkit-scrollbar{
+  width: 10px;
+  background: #c1ceff;
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: 2em;
+  background: #282f4e;
+}
