--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,19 @@ html{
 }
 
 h1,h2,h3,h4,h5,h6{
+  /* background: #132357; */
   color:#fff;
   font-family: "Lato", sans-serif;
   margin: 0;
 }
 
 h1,h2{
+  /* background: #132357; */
   font-size: 2rem;
   font-weight: 500;
 }
-
 p{
+  /* background: #132357; */
   color: #fff;
   opacity: 75%;
   font-size: 1rem;
@@ -37,20 +39,24 @@ p{
 }
 
 ul{
+  /* background: #132357; */
   list-style: none;
   margin: 0;
 }
 
 a{
+  /* background: #132357; */
   color: unset;
   font-family: "Lato", sans-serif;
 }
 
 a:hover{
+  /* background: #132357; */
   color: unset;
 }
 
 section,footer{
+  /* background: #132357; */
   padding: 60px 0%;
 }
 
