--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,9 @@ section,footer{
   border-radius: 2em;
   background: #282f4e;
 }
+
+@media only screen and (max-width: 992px){
+  section{
+    padding: 40px 0px;
+  }
+}
