--- a/src/Components/About/awards.css
+++ b/src/Components/About/awards.css
@@ -33,3 +33,18 @@
     color: #fff;
     margin-bottom: 15px;
 }
+
+
+@media only screen and (max-width: 992px){
+    .award_title{
+        font-size: .8rem;
+    }
+
+    .award_title span{
+        font-size: .7rem;
+    }
+
+    .award_year{
+        font-size: .7rem;
+    }
+}
