--- a/src/Components/About/education.css
+++ b/src/Components/About/education.css
@@ -28,5 +28,11 @@ td{
 tr:nth-child(even){
     background: #102048;
 }
-tr:first-child{
+
+
+@media only screen and (max-width: 992px){
+    th,td{
+        font-size: .7rem;
+        padding: 0.8rem;
+    }
 }
