--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -9,3 +9,9 @@
     font-size: .9rem;
     background: transparent;
 }
+
+@media only screen and (max-width: 992px){
+    .footer p{
+        font-size: .7rem;
+    }
+}
