--- a/src/Components/Testimonial/testimonial.css
+++ b/src/Components/Testimonial/testimonial.css
@@ -21,3 +21,13 @@
     font-size: .9rem;
 
 }
+
+
+@media only screen and (max-width: 992px){
+
+    .single_testimonial p{
+        font-size: .8rem;
+        line-height: 20px;
+    }
+
+}
