--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -15,3 +15,15 @@
 .single_info-box h6{
     font-size: 1.1rem;
 }
+
+@media only screen and (max-width: 992px){
+    .single_info-box h6{
+        font-size: .8rem;
+    }
+
+    .single_info-box p{
+        font-size: .7rem;
+    }
+
+    .single_info-box{word-wrap: break-word;}
+}
