--- a/src/Components/form/form.css
+++ b/src/Components/form/form.css
@@ -38,3 +38,10 @@ textarea {
     width: 300px;
     height: 150px;
   } */
+
+  @media only screen and (max-width: 992px){
+    .submit_btn{
+        padding: 5px 25px;
+        font-size: .8rem;
+    }
+  }
